--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: ^3.7.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,7 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.0
   pinput: ^5.0.2
-  intl: ^0.20.2
+  intl: ^0.20.0
 
 dev_dependencies:
   flutter_test:
@@ -61,9 +61,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/fonts/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
@@ -73,13 +73,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
+  fonts:
+    - family: Bebas Neue
+      fonts:
+        - asset: assets/fonts/Almarai,Bebas_Neue,Noto_Kufi_Arabic/Bebas_Neue/BebasNeue-Regular.ttf
+    - family: Almarai 
+      fonts:
+        - asset: assets/fonts/Almarai,Bebas_Neue,Noto_Kufi_Arabic/Almarai/Almarai-Regular.ttf
+        - asset: assets/fonts/Almarai,Bebas_Neue,Noto_Kufi_Arabic/Almarai/Almarai-Bold.ttf
+        - asset: assets/fonts/Almarai,Bebas_Neue,Noto_Kufi_Arabic/Almarai/Almarai-ExtraBold.ttf
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
