--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "cSpell.words": ["mostawak", "Neue"],
+  "cSpell.words": ["bluecadre", "mostawak", "Neue", "raad"],
   "cmake.ignoreCMakeListsMissing": true,
   "java.configuration.updateBuildConfiguration": "interactive"
 }
