--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^6.3.0
   pinput: ^5.0.2
   intl: ^0.20.0
+  flutter_svg: ^2.2.1
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
