Modified set_pass_screen and success_screen and added timer bloc to emplemnt Timer in otp_screen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,22 @@
 {
-  "cSpell.words": ["bluecadre", "mostawak", "Neue", "raad"],
+  "cSpell.words": [
+    "bluecadre",
+    "mostawak",
+    "Neue",
+    "raad",
+    "أكثر",
+    "أنشئ",
+    "إنشاء",
+    "الخاصة",
+    "الدخول",
+    "السابقة",
+    "تغيير",
+    "تكون",
+    "تهانينا",
+    "لأمان",
+    "لتسجيل",
+    "مختلفة"
+  ],
   "cmake.ignoreCMakeListsMissing": true,
   "java.configuration.updateBuildConfiguration": "interactive"
 }
