--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.20.0
   flutter_svg: ^2.2.1
   flutter_screenutil: ^5.9.3
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
