--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2
+  sdk: ">=3.6.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,8 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.0
   pinput: ^5.0.2
-  intl: ^0.20.0
-  flutter_svg: ^2.2.1
+  intl: ^0.19.0
+  flutter_svg: ^2.2.0
   flutter_screenutil: ^5.9.3
   flutter_bloc: ^9.1.1
 
