--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,12 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_bloc: ^9.1.1
   shared_preferences: ^2.5.3
+  firebase_core: ^4.2.0
+  cloud_firestore: ^6.0.3
+  firebase_storage: ^13.0.3
+  firebase_messaging: ^16.0.3
+  firebase_auth: ^6.1.1
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   flutter_test:
