--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_bloc: ^9.1.1
   shared_preferences: ^2.3.4
+  image_picker: ^1.0.7
 
   # ✅ Firebase & Google (متوافقة سوا)
   firebase_core: ^3.4.0
